--- a/map.html
+++ b/map.html
@@ -66,6 +66,10 @@
             <aside class="route-stops-panel" id="routeStopsPanel">
                 <div class="rsp-header">
                     <a href="#" id="viewOnMapLink">View on Map <i class="fas fa-external-link-alt"></i></a>
+                    <button class="btn btn-sm btn-outline" id="reverseRouteBtn">
+                        <i class="fas fa-exchange-alt"></i>
+                        Reverse Route
+                    </button>
                 </div>
                 <div class="stop-list" id="stopList">
                     <!-- Stops rendered by JS -->
