--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <!-- Header -->
         <header class="header">
             <div class="header-content">
-                <div class="logo">
-                    <i class="fas fa-bus"></i>
-                    <h1>Bus Tracker</h1>
-                </div>
+                <a href="index.html" class="logo">
+    <i class="fas fa-bus"></i>
+    <h1>Bus Tracker</h1>
+</a>
+
                 <div class="header-actions">
                     <a href="map.html" class="btn btn-primary">
                         <i class="fas fa-map"></i>
